...
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end">

                    <ImageView
                        android:id="@+id/plus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
...
                        android:layout_marginEnd="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/_0"
                        android:textSize="18sp" />

                    <ImageView
                        android:id="@+id/minus"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_marginStart="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginEnd="4dp"
...
