<resources>
    <string name="app_name">Commerce App</string>
    <string name="phone">Phone</string>
    <string name="address">Address</string>
    <string name="name">Name</string>
    <string name="errorName">"Enter Your Name"</string>
    <string name="errorAddress">"Enter Your Address"</string>
    <string name="errorPhone">"Enter Your Phone"</string>
    <string name="ok">OK</string>
    <string name="congratulation">Congratulation</string>
    <string name="successOrderMsg">"Thank you %s, Your order has been successfully placed with order id: %s by %s."</string>
    <string name="submitOrder">Submit Order</string>
    <string name="total_price">Total Price </string>
    <string name="total_tax_price">(Inclusive all taxes)</string>
    <string name="_0">0</string>
    <string name="checkout">Checkout</string>
    <string name="quantity">Quantity</string>
</resources>