...
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/orderSummaryBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/checkout" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
