...
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/bottomll"
            android:layout_alignParentTop="true"
            android:background="@android:color/white">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
...
                    android:layout_marginEnd="32dp"
                    android:textSize="18sp" />
            </RelativeLayout>


            <com.google.android.material.button.MaterialButton
                android:id="@+id/orderSummaryBtn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/submitOrder" />
        </LinearLayout>

...
